--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
     'pandas ~= 2.1.2',
-    'git+https://github.com/virinci/cryterion.git@main',
+    # 'git+https://github.com/virinci/cryterion.git@main',
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
