hatchling allow direct references

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 
+[tool.hatch.metadata]
+allow-direct-references = true
+
 [project.urls]
 Homepage = "https://github.com/aahnik/outbench"
